--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ addons:
 
 # Install scripts. (runs after repo cloning)
 install:
-  # install module
+  # install modules
   - npm install --build-from-source
 
 # Post-install test scripts.
